# WPP

./: .gitignore  README.md  pyproject.toml
src/: transformer.py  utils.py  wsi_reader.py
src/archive/: illumination_map.ipynb  stain_deconvolution.ipynb  stain_normalization.ipynb  stain_normalization_enhance.ipynb  stain_normalization_enhance2.ipynb  staine_normalization.ipynb  tissue_detection.ipynb
