[tool.poetry]
name = "wpp"
version = "0.1.0"
description = "WPP - WSI Preprocessing Pipeline"
authors = ["Choongmin Kim <choongminkim0123@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
